--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
-# Local development
+# Local
 VITE_API=http://localhost:5000/api
 
-# In production (Railway), replace with deployed backend URL:
+# Production: set to your backend production URL + /api
 # VITE_API=https://your-backend.up.railway.app/api
