--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # Local
-VITE_API=http://localhost:5000/api
+#VITE_API=http://localhost:5000/api
 
 # Production: set to your backend production URL + /api
-# VITE_API=https://your-backend.up.railway.app/api
+VITE_API=https://mywebappbackend.up.railway.app/api
